lute/static/css/styles.css
/* ... */
#dicttabslayout {
    display: grid;
}

#dictframes {
    width: 100%;
    /* height: 100%; */
    flex: 1;
}

#dict-menu-container {
    position: relative;
    border: 1px solid #85c0ee;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    /* overflow: hidden; */
    border-bottom: none;
    left: 0.3rem;
    /* flex fixes long button size */
    display: flex;
}

#dict-menu-container .dict-btn{
    height: 100%;
    border: none;
}

.dict-btn {
    position: relative;
    padding: 0.2rem 1rem;
    border: none;
    color: #969696;
    background-color: #dcebf8;
    /* height: 100%; */
    box-sizing: border-box;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    /* filter: brightness(0.8) grayscale(0.7); */
    z-index: 1;
    overflow: hidden;
    white-space: nowrap;

    display: flex;
    align-items: center;
    /* justify-content: center; */
    gap: 0.3rem;
}

.dict-btn:not(#dict-image-btn) {
    width: 100%;
}

#dicttabsstatic {
    display: flex;
    margin-left: 1rem;
    /* justify-content: end; */
}

/* after element is for hiding text at the edges */
#dicttabslayout .dict-btn::after,
#dicttabslayout .dict-menu-item::after {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    border-inline: 4px solid #dcebf8;
    box-sizing: border-box;
}

#dicttabslayout .dict-menu-item::after {
    border-color: aliceblue;
}

#dicttabslayout .dict-btn-active::after {
    border-color: #68ace0;
}

#dicttabslayout .dict-btn[data-dict-external="true"]::after,
#dicttabslayout .dict-menu-item[data-dict-external="true"]::after,
#dicttabslayout .dict-btn-select[data-dict-external="false"]::after {
    border-right-width: 1.5rem;
}

#dicttabslayout .dict-btn-select[data-dict-external="true"]::after {
    border-right-width: 2.6rem
}

#dicttabslayout .dict-btn:not(.dict-btn-active):not(.dict-btn[data-dict-external="true"]):hover::after,
#dicttabslayout .dict-btn:not(.dict-btn-active):hover::after {
    border-color: aliceblue;
}

.dict-btn-fav-img,
.dict-btn-list-img,
.dict-btn-external-img {
    height: 60%;
}

.dict-btn-list-img,
.dict-btn-external-img {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    z-index: 2;
    opacity: 0.4;
}

.dict-btn-list-img {
    /* src needs to be set here instead of js. explanation in createTabBtn */
    content: url("../icn/list.svg");
    right: 0;
    opacity: 1;
    /* add padding so clicking area is bigger */
    padding: 0.3rem;
}

.dict-btn-external-img{
    content: url("../icn/open.svg");
    right: 0.3rem;
}

.dict-btn-select .dict-btn-external-img {
    right: 1.4rem;
}

.dict-btn:not(.dict-btn-active):not(.dict-btn[data-dict-external="true"]) img {
    opacity: 0.5;
}

.dict-btn:hover + #dict-select,
.dict-btn:not(.dict-btn-active):hover {
    background-color: aliceblue;
}

#dict-image-btn:hover {
    background-color: #623006;
    filter: invert(1);
}

.dict-btn.dict-btn-active,
.dict-btn.dict-btn-active + #dict-select {
    background-color: #68ace0;
    color: #fff;
    /* filter: brightness(1); */
    z-index: 2;
}

.dict-btn:not(.dict-btn-select):not(#dict-image-btn) {
    border: 1px solid #aaceea;
    border-bottom: none;
    border-right: none;
}

#dicttabsstatic .dict-btn.dict-sentences-btn {
    width: 6rem;
    border: 1px solid #85c0ee;
    border-bottom: none;
}

.dict-btn:not(#dict-image-btn):not(.dict-btn-select):last-of-type {
    border-right: 1px solid #aaceea;
}

.dict-btn-active:not(.dict-btn-select):not(#dict-image-btn) {
    /* border: 2px solid #68ace0; */
    box-shadow: inset 0 0 0 2px #68ace0;
}

.dict-btn[data-dict-external="true"] {
    color: #5b5b5b;
}

#dict-image-btn.dict-btn-active {
    background-color: #97531f;
    filter: invert(1);
}

.dictframe {
    display: none;
    border: none;
    border-top: 3px solid #68ace0;
}

.dict-active {
    display: block;

    width: 100%;
    height: 100%;
}

#dict-image-btn {
    background: url("../icn/images.svg");
    background-repeat: no-repeat;
    background-position: center;
    background-size: 85%;

    /* width: 32px; */
    padding-top: 1.6rem;
    border-top-left-radius: 3px;
    border-top-right-radius: 3px;
    /* height: unset; */
    /* margin-left: 0.5rem; */
    margin-inline: 0.8rem;
    /* justify-self: center; */
    /* margin-bottom: 4px; */
    cursor: pointer;

    filter: invert(66%) sepia(33%) saturate(700%) hue-rotate(170deg) brightness(92%) contrast(90%);
}

#dict-list-container.dict-list-hide {
    opacity: 0;
    pointer-events: none;
    /* clip-path: rect(0 0 0 114%); */
}

#dict-list-container {
    opacity: 1;
    pointer-events: unset;
    /* clip-path: rect(0 0 106% 114%); */

    position: absolute;
    background-color: aliceblue;
    min-width: 100%;
    top: 100%;
    left: 0;
    border-bottom-left-radius: 3px;
    border-bottom-right-radius: 3px;
    border-top: none;
    box-sizing: border-box;
    box-shadow: 0 3px 5px 0 #0000002b;
    /* easier way to hide sharp edges of list elements
    instead adding border-radius to them too */
    overflow: hidden; 

    transition: opacity 0.1s;
}

#dict-menu-container:hover .dict-btn-select:not(.dict-btn-active) {
    background-color: aliceblue;
}

#dict-menu-container:hover .dict-btn-select:not(.dict-btn-active)::after {
    border-color: aliceblue;
}

.dict-menu-item {
    font-size: 0.9rem;
    padding: 0.5rem 1rem;
    margin: 0;
    display: flex;
    align-items: center;
    gap: 0.3rem;
    cursor: pointer;
    border: none;
    background: none;
    width: 100%;
    position: relative;
}

.dict-menu-item:hover {
    background-color: #68ace0;
    color: #fff;
}

#dict-menu-container .dict-menu-item:hover::after {
    border-color: #68ace0;
}

/* STATUS RADIO */

#status input {
    display: none;
}

#status {
    display: flex;
    align-items: center;
    list-style: none;

    --status-select-color: #4e4f51c4;
    --status-hover-color: #4e4f5156;
}
/* ... */

